# paper_gorbani_2025_humanoids_multi-rate-mpc-ironcub

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pixi.toml
src/: CMakeLists.txt  variable_sampling_mpc.py
src/cmake/: setup.in
src/config/: configMujoco.toml  robot.toml  vs_mcp_config.xml
src/flight-controller/momentum-based-linear-mpc-lib/: CMakeLists.txt
src/flight-controller/momentum-based-linear-mpc-lib/bindings/python/: CMakeLists.txt  MPCPyBindings.cpp
src/flight-controller/momentum-based-linear-mpc-lib/include/IMPCProblem/: IMPCProblem.h  IQPUtilsMPC.h
src/flight-controller/momentum-based-linear-mpc-lib/include/variableSamplingMPC/: VSconstant.h  constraintsVSMPC.h  costsVSMPC.h  systemDynamicsVSMPC.h  variableSamplingMPC.h
src/flight-controller/momentum-based-linear-mpc-lib/src/IMPCProblem/: IQPUtilsMPC.cpp
src/flight-controller/momentum-based-linear-mpc-lib/src/variableSamplingMPC/: constraintsVSMPC.cpp  costsVSMPC.cpp  systemDynamicsVSMPC.cpp  variableSamplingMPC.cpp
src/flight-controller/utils/: CMakeLists.txt
src/flight-controller/utils/bindings/python/: CMakeLists.txt  PyIQPProblem.h  flightCtrlPyBindings.cpp
src/flight-controller/utils/include/: ExternalWrenches.h  FlightControlUtils.h  GainScheduling.h  IQPProblem.h  JetModel.h  QPExample.h
src/flight-controller/utils/src/: ExternalWrenches.cpp  FlightControlUtils.cpp  GainScheduling.cpp  IQPProblem.cpp  JetModel.cpp  QPExample.cpp
src/mujoco_lib/: ironcub_mujoco_simulator.py  nn_jet_model.py
